viewing posts and data

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
        "4           0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
        "4            37           0  https://www.reddit.com/r/depression/comments/f...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1141,13 +1141,117 @@
        "4             3           1  https://www.reddit.com/r/SuicideWatch/comments...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "suicide_watch[[\"title\", \"selftext\", \"author\",  \"num_comments\", \"is_suicide\",\"url\"]].head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the suicide dataset. Just from the preview, the titles and posts are clearly different, but it is very hard to distinguish which is which and how to classify that. Post 5 has no body, which also could be problematic as it is a missing value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(917, 6)\n",
+      "(980, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# viewing shapes of datasets\n",
+    "print(depression[[\"title\", \"selftext\", \"author\",  \"num_comments\", \"is_suicide\",\"url\"]].shape)\n",
+    "print(suicide_watch[[\"title\", \"selftext\", \"author\",  \"num_comments\", \"is_suicide\",\"url\"]].shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "they are a bit different in size, but after cleaning and processing this shouldn't be an issue. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello. Depression has always been a secondary problem for me, with my main antagonist being severe Harm OCD. But since my relationship ended 8 months ago, I've been stuck in this horrific cycle of absolutely loathing myself, feeling heavy/tired and totally unmotivated to do anything. It's like I'm living in a 2 dimensional world. Nothing in life jumps out and catches my attention like it used to. I used to be quite creative but it's just taken a nose dive. Any work I do is utterly awful and I'm amazed I'm not been kicked off projects (I work freelance). I wake up and I just want to be dead, quite honestly. In fact in the last few weeks I've even found getting out of bed to be a monumental struggle in itself, where I'm almost in tears from the weight of everything.\n",
+      "\n",
+      "I am getting help with a therapist and am on an SSRI/low dose anti psych. And I've taken their advice seriously in terms of behavioural activation and avoiding staying in bed. I've started cycling again (just done 20 miles today in fact). But I still feel utterly wretched and everything I do is laced with this horrible belief that this is the end and suicide is my only way out of the pain I'm going through. The years ahead fill me with dread (I'm in my 30s). With my Harm OCD I have a huge hatred of myself anyway, but lately things have just got so heavy. I'd just like to know if anybody can relate to my post and has any first person advice? Psychiatrists and therapists always feel so removed from the reality (for me, anyway) - I'd just like to hear from people who know what's like and have helped themselves.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1595"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reading post 118 from the depression dataset\n",
+    "print(depression[\"selftext\"][118])\n",
+    "len(depression[\"selftext\"][118])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm an 18 year old with severe depression, anxiety, ADHD, borderline personality disorder and DID at a point in my life. But I'm slowly recovering.\n",
+      "\n",
+      "I have always felt like I never belonged to this world, because I am \"too imaginative\" and \"too kind\". I behave \"not like how people should\". I'm mostly well-liked, but I know they think I'm a weirdo. Everyone does.\n",
+      "\n",
+      "It's final exam time for us, and I have to secure good marks, otherwise I won't be able to enter any good streams in a good college. It would be the end of my future. My family is in a financial crunch, but they give up everything for me. I am dead-set on helping my friends get through their depression and suicidal tendencies, but I'm failing at that. I have had three attempts, but I was saved by a person, who himself was alexithymic (I think) and suicidal. He still is, and he says if he doesn't do well, he will commit suicide.\n",
+      "\n",
+      "I don't know what I'm gonna do if I don't perform the way I should. But I certainly know that I will die if he does.\n",
+      "\n",
+      "In case everything goes wrong, I'll leave. There's no other way. The day of my death is nearing. It's just 3 months away.\n",
+      "\n",
+      "Love you all. Have a good day.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1172"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# reading post 118 from the suicide dataset\n",
+    "print(suicide_watch[\"selftext\"][118])\n",
+    "len(suicide_watch[\"selftext\"][118])"
    ]
   },
   {
