began python web app

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -1255,6 +1255,288 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "just from reading them, they look pretty similar. However, the stories of both people are completely different and one of them is suicidal. The second person explicitly says they will die in 3 months, but the first post makes no such remarks. A classifier could do a good job of distinguishing between these two. Let's read two more. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have been diagnosed with anxiety and depression right now and I have been taking prescription meds for the last couple weeks. It really helps! \n",
+      "\n",
+      "A little background- I got out of a 6 year relationship due to not seeing a future with my ex in December 2019. And then one person who I thought was really close friend of mine, decided he did not want to be friends with me anymore and cut all contacts with me. I get emotionally attached wayyy too easily and this led to me having anxiety, panic attacks and depression - which eventually led to insomnia, IBS, migraines and constant body aches. \n",
+      "\n",
+      "I started therapy in feb 2020 and have been since going to my therapist every week. And my therapist suggested I look at options for medication and try it. So since the last 2 weeks, I’m on Lexapro (SSRI) and my psychiatrist did tell me that it is going to take a few weeks to see changes. But for the last 3/4 days I have been observing that my energy levels have increased because I have been able to sleep well and it is so much better. My IBS has decreased and I haven’t got any migraines. I’m really really glad the medication is helping. If anyone is out there looking of options, and one the fence of trying medication, go for it. I’m sure if it working and it will help.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(depression[\"selftext\"][100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I wanted to die starting in Jan 2018, but things have only gotten worse.\n",
+      "\n",
+      "In summer 2018, those fucks on the Suicide Prevention chatroom called the police when I expressed suicidal ideations, so I was kidnapped and sent to a series of hospital-prisons with junk medical staff. I lost my job due to the hospital stay - and my apartment, car, and dog shortly followed.\n",
+      "\n",
+      "Can't get a decent job because my resume is now all fucked up and I have no connections, and I refuse to go back to miserable jobs that pay horribly. I'd rather die than do that for life.\n",
+      "\n",
+      "I am about to be sued on $4K debt, and then yesterday I was handed a $6.5K medical bill for treatment that would have been 100% unnecessary had I still had insurance and was able to go to regular check ups.\n",
+      "\n",
+      "You fucks on the Suicide Prevention line made my life demonstrably worse. You destroyed the mechanisms that kept me going as an independent and self-sufficient human. Now I have nothing and am in a far worse position (logistically speaking) to be dealing with any of this.\n",
+      "\n",
+      "Right now I'm sort of just waiting until where I'm currently staying kicks me out, which should be soon. After that, it's time to die. But I'll be sure to let the responsible parties know their part in this.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(suicide_watch[\"selftext\"][100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "between these two posts, there is a clear distinction, but it would be hard for a regular person reading it to be sure. Only a classifier generalized on thousands of peoples suffering could do this. But the first post talks about how their life is getting better, while the second explains that the person thinks that it is time to die. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>author</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>is_suicide</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Our most-broken and least-understood rules is ...</td>\n",
+       "      <td>We understand that most people who reply immed...</td>\n",
+       "      <td>SQLwitch</td>\n",
+       "      <td>133</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/d...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Regular Check-In Post</td>\n",
+       "      <td>Welcome to /r/depression's check-in post - a p...</td>\n",
+       "      <td>circinia</td>\n",
+       "      <td>1644</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/e...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I hate it so much when you try and express you...</td>\n",
+       "      <td>I've been feeling really depressed and lonely ...</td>\n",
+       "      <td>TheNewKiller69</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I went to the hospital because I was having re...</td>\n",
+       "      <td>I literally broke down crying and asked to go ...</td>\n",
+       "      <td>Jazzlecrab</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cake day for me</td>\n",
+       "      <td>Any kind soul want to give a depressed person ...</td>\n",
+       "      <td>Depressed_Kid786</td>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1892</th>\n",
+       "      <td>I'm in so much pain</td>\n",
+       "      <td>It's so hard just to get out of bed every morn...</td>\n",
+       "      <td>BigPete543</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1893</th>\n",
+       "      <td>I'm too stupid to achieve anything in life. I'...</td>\n",
+       "      <td>I have a low IQ. Twice I've been tested and bo...</td>\n",
+       "      <td>Elisbt</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1894</th>\n",
+       "      <td>Useless</td>\n",
+       "      <td>I don't feel useless, im useless.</td>\n",
+       "      <td>Gayhova</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1895</th>\n",
+       "      <td>I wish it was as easy as disappearing into thi...</td>\n",
+       "      <td>I wish there was some way I could will myself ...</td>\n",
+       "      <td>evofe</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1896</th>\n",
+       "      <td>i dont know what to do with myself right now</td>\n",
+       "      <td>i want to die but most of all i think i want t...</td>\n",
+       "      <td>ponkichii</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1897 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  title  \\\n",
+       "0     Our most-broken and least-understood rules is ...   \n",
+       "1                                 Regular Check-In Post   \n",
+       "2     I hate it so much when you try and express you...   \n",
+       "3     I went to the hospital because I was having re...   \n",
+       "4                                       Cake day for me   \n",
+       "...                                                 ...   \n",
+       "1892                                I'm in so much pain   \n",
+       "1893  I'm too stupid to achieve anything in life. I'...   \n",
+       "1894                                            Useless   \n",
+       "1895  I wish it was as easy as disappearing into thi...   \n",
+       "1896       i dont know what to do with myself right now   \n",
+       "\n",
+       "                                               selftext            author  \\\n",
+       "0     We understand that most people who reply immed...          SQLwitch   \n",
+       "1     Welcome to /r/depression's check-in post - a p...          circinia   \n",
+       "2     I've been feeling really depressed and lonely ...    TheNewKiller69   \n",
+       "3     I literally broke down crying and asked to go ...        Jazzlecrab   \n",
+       "4     Any kind soul want to give a depressed person ...  Depressed_Kid786   \n",
+       "...                                                 ...               ...   \n",
+       "1892  It's so hard just to get out of bed every morn...        BigPete543   \n",
+       "1893  I have a low IQ. Twice I've been tested and bo...            Elisbt   \n",
+       "1894                  I don't feel useless, im useless.           Gayhova   \n",
+       "1895  I wish there was some way I could will myself ...             evofe   \n",
+       "1896  i want to die but most of all i think i want t...         ponkichii   \n",
+       "\n",
+       "      num_comments  is_suicide  \\\n",
+       "0              133           0   \n",
+       "1             1644           0   \n",
+       "2                8           0   \n",
+       "3               15           0   \n",
+       "4               37           0   \n",
+       "...            ...         ...   \n",
+       "1892             6           1   \n",
+       "1893             3           1   \n",
+       "1894             5           1   \n",
+       "1895             1           1   \n",
+       "1896             3           1   \n",
+       "\n",
+       "                                                    url  \n",
+       "0     https://www.reddit.com/r/depression/comments/d...  \n",
+       "1     https://www.reddit.com/r/depression/comments/e...  \n",
+       "2     https://www.reddit.com/r/depression/comments/f...  \n",
+       "3     https://www.reddit.com/r/depression/comments/f...  \n",
+       "4     https://www.reddit.com/r/depression/comments/f...  \n",
+       "...                                                 ...  \n",
+       "1892  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "1893  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "1894  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "1895  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "1896  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "\n",
+       "[1897 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the 5 columns we chose seem good so lets shorten the datasets. \n",
+    "dep_columns = depression[[\"title\", \"selftext\", \"author\",  \"num_comments\", \"is_suicide\",\"url\"]]\n",
+    "sui_columns = suicide_watch[[\"title\", \"selftext\", \"author\",  \"num_comments\", \"is_suicide\",\"url\"]]\n",
+    "\n",
+    "# lets combine the datasets into one massive dataset. \n",
+    "combined_data = pd.concat([dep_columns,sui_columns],axis=0, ignore_index=True)    \n",
+    "combined_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving the combined data in our datasets folder\n",
+    "combined_data.to_csv('/Users/ayaanhaque/Desktop/SuiSense/data/combined_data.csv', index = False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
