data cleaning finished

--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -1538,6 +1538,406 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1897 entries, 0 to 1896\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   title         1897 non-null   object\n",
+      " 1   selftext      1832 non-null   object\n",
+      " 2   author        1897 non-null   object\n",
+      " 3   num_comments  1897 non-null   int64 \n",
+      " 4   is_suicide    1897 non-null   int64 \n",
+      " 5   url           1897 non-null   object\n",
+      "dtypes: int64(2), object(4)\n",
+      "memory usage: 89.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checking for missing values\n",
+    "combined_data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "it looks like the only missing values are in the text body, which makes sense. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>author</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>is_suicide</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>Can someone recommend good qualities in therap...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>eito_8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>921</th>\n",
+       "      <td>Nobody gives a fuck until you die, and even th...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>lil_peemis</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>923</th>\n",
+       "      <td>I have two brothers who have killed themselves...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ArsenalOwl</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>925</th>\n",
+       "      <td>I want to die I want to die I want to die</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>alynde</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>934</th>\n",
+       "      <td>I am so sorry, but it has gotten worse</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SmushyKidK</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>937</th>\n",
+       "      <td>I want to douse my body in gasoline and set my...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SalehRobbins</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>941</th>\n",
+       "      <td>I can't do this anymore</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>sappy_banana</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>957</th>\n",
+       "      <td>If I had a gun, I’d blow my fucking brains out...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CGM2004</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>960</th>\n",
+       "      <td>This world is a joke.</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>crybaby1577</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>964</th>\n",
+       "      <td>I think I’m ready</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>___horse___</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 title selftext        author  \\\n",
+       "184  Can someone recommend good qualities in therap...      NaN        eito_8   \n",
+       "921  Nobody gives a fuck until you die, and even th...      NaN    lil_peemis   \n",
+       "923  I have two brothers who have killed themselves...      NaN    ArsenalOwl   \n",
+       "925          I want to die I want to die I want to die      NaN        alynde   \n",
+       "934             I am so sorry, but it has gotten worse      NaN    SmushyKidK   \n",
+       "937  I want to douse my body in gasoline and set my...      NaN  SalehRobbins   \n",
+       "941                            I can't do this anymore      NaN  sappy_banana   \n",
+       "957  If I had a gun, I’d blow my fucking brains out...      NaN       CGM2004   \n",
+       "960                              This world is a joke.      NaN   crybaby1577   \n",
+       "964                                  I think I’m ready      NaN   ___horse___   \n",
+       "\n",
+       "     num_comments  is_suicide  \\\n",
+       "184             2           0   \n",
+       "921             3           1   \n",
+       "923             1           1   \n",
+       "925             4           1   \n",
+       "934             4           1   \n",
+       "937             3           1   \n",
+       "941             4           1   \n",
+       "957             1           1   \n",
+       "960            11           1   \n",
+       "964             4           1   \n",
+       "\n",
+       "                                                   url  \n",
+       "184  https://www.reddit.com/r/depression/comments/f...  \n",
+       "921  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "923  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "925  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "934  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "937  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "941  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "957  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "960  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "964  https://www.reddit.com/r/SuicideWatch/comments...  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# looking at the posts with missing text values\n",
+    "combined_data[combined_data[\"selftext\"].isnull()].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The posts with missing values are either very concise in the title and to the point, or the main text is basically in the title. Luckily, there aren't that many posts with missing values. However, most of the null values are in the suicide dataset, which makes sense but also could be troublesome for our classifier. Maybe using the titles as the text would be a good approach. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    64\n",
+       "0     1\n",
+       "Name: is_suicide, dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_data[\"is_suicide\"][combined_data[\"selftext\"].isnull()].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the best approach for the null values it to just fill them with \"emptypost\"\n",
+    "combined_data[\"selftext\"].fillna(\"emptypost\",inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>selftext</th>\n",
+       "      <th>author</th>\n",
+       "      <th>num_comments</th>\n",
+       "      <th>is_suicide</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>Can someone recommend good qualities in therap...</td>\n",
+       "      <td>emptypost</td>\n",
+       "      <td>eito_8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://www.reddit.com/r/depression/comments/f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>921</th>\n",
+       "      <td>Nobody gives a fuck until you die, and even th...</td>\n",
+       "      <td>emptypost</td>\n",
+       "      <td>lil_peemis</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>923</th>\n",
+       "      <td>I have two brothers who have killed themselves...</td>\n",
+       "      <td>emptypost</td>\n",
+       "      <td>ArsenalOwl</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>925</th>\n",
+       "      <td>I want to die I want to die I want to die</td>\n",
+       "      <td>emptypost</td>\n",
+       "      <td>alynde</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>934</th>\n",
+       "      <td>I am so sorry, but it has gotten worse</td>\n",
+       "      <td>emptypost</td>\n",
+       "      <td>SmushyKidK</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>https://www.reddit.com/r/SuicideWatch/comments...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 title   selftext      author  \\\n",
+       "184  Can someone recommend good qualities in therap...  emptypost      eito_8   \n",
+       "921  Nobody gives a fuck until you die, and even th...  emptypost  lil_peemis   \n",
+       "923  I have two brothers who have killed themselves...  emptypost  ArsenalOwl   \n",
+       "925          I want to die I want to die I want to die  emptypost      alynde   \n",
+       "934             I am so sorry, but it has gotten worse  emptypost  SmushyKidK   \n",
+       "\n",
+       "     num_comments  is_suicide  \\\n",
+       "184             2           0   \n",
+       "921             3           1   \n",
+       "923             1           1   \n",
+       "925             4           1   \n",
+       "934             4           1   \n",
+       "\n",
+       "                                                   url  \n",
+       "184  https://www.reddit.com/r/depression/comments/f...  \n",
+       "921  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "923  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "925  https://www.reddit.com/r/SuicideWatch/comments...  \n",
+       "934  https://www.reddit.com/r/SuicideWatch/comments...  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# checking if filling missing values worked\n",
+    "combined_data[combined_data[\"selftext\"].isin([\"emptypost\"])].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1897 entries, 0 to 1896\n",
+      "Data columns (total 6 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   title         1897 non-null   object\n",
+      " 1   selftext      1897 non-null   object\n",
+      " 2   author        1897 non-null   object\n",
+      " 3   num_comments  1897 non-null   int64 \n",
+      " 4   is_suicide    1897 non-null   int64 \n",
+      " 5   url           1897 non-null   object\n",
+      "dtypes: int64(2), object(4)\n",
+      "memory usage: 89.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checking entire dataset for missing values\n",
+    "combined_data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
