--- a/notebooks/data_processing.ipynb
+++ b/notebooks/data_processing.ipynb
@@ -2490,6 +2490,21 @@
     "### Data Preprocessing Complete\n",
     "This was a relatively simple process because we only have a few attributes to adjust. We have 3 attributes to train our model on now."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# EDA\n",
+    "For EDA, let's just go through a few things to better understand the dataset so we can properly build our classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
