--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -1,6 +1,40 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Collection\n",
+    "This code is to collect data and update our datasets based on the newest posts from reddit. We are using Reddit's API to collect this data. The two subreddits that the data is from r/depression and r/SuicideWatch. This will allow our classifier to classify data in 3 broad classes, either depression or suicidal, or none. After that, we will develop a model to determine the stages of depression and suicide the user is going through. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
